change code to remove some of the warnings that findbugs reports